Enable HTTP/2 feature

--- a/conf/etc/nginx/vhost.conf
+++ b/conf/etc/nginx/vhost.conf
@@ -22,7 +22,7 @@ server {
 ##############
 
 server {
-    listen 443 default_server;
+    listen 443 default_server http2;
 
     server_name  _ <ALIAS_DOMAIN> docker;
 
