--- a/8.0/Dockerfile
+++ b/8.0/Dockerfile
@@ -9,6 +9,14 @@ RUN set -x \
     && apt install --assume-yes htop pv unzip mc lsof default-mysql-client \
     && docker-image-cleanup
 
+RUN echo 'Install n98-magerun2.phar' \
+    && curl -sS -o n98-magerun2.phar https://files.magerun.net/n98-magerun2.phar \
+    && curl -sS -o n98-magerun2.phar.sha256 https://files.magerun.net/sha256.php?file=n98-magerun2.phar \
+    && shasum -a 256 -c n98-magerun2.phar.sha256 \
+    && rm n98-magerun2.phar.sha256 \
+    && chmod +x n98-magerun2.phar \
+    && mv n98-magerun2.phar /usr/local/bin/n98-magerun2.phar
+
 COPY conf/etc/nginx/vhost.conf /opt/docker/etc/nginx/vhost.conf
 COPY conf/etc/nginx/conf.d/10-php.conf /opt/docker/etc/nginx/conf.d/10-php.conf
 COPY conf/etc/nginx/vhost.common.d/10-php.conf /opt/docker/etc/nginx/vhost.common.d/10-php.conf
