--- a/prod-7.4/Dockerfile
+++ b/prod-7.4/Dockerfile
@@ -3,7 +3,8 @@ FROM webdevops/php-nginx:7.4
 MAINTAINER Igor Goltsov <igor@ecomgems.com>
 
 ENV WEB_DOCUMENT_ROOT=/phpapp
-RUN sed -i 's/user www-data;/user application;/g' /etc/nginx/nginx.conf
+RUN sed -i 's/user nginx;/user application;/g' /etc/nginx/nginx.conf
+RUN sed -i 's/user  nginx;/user application;/g' /etc/nginx/nginx.conf
 RUN set -x \
     && apt update \
     && apt install --assume-yes pv unzip htop mc lsof default-mysql-client  \
