--- a/7.1/Dockerfile
+++ b/7.1/Dockerfile
@@ -4,6 +4,7 @@ MAINTAINER Igor Goltsov <igor@ecomgems.com>
 
 ENV WEB_DOCUMENT_ROOT=/phpapp
 RUN sed -i 's/user www-data;/user application;/g' /etc/nginx/nginx.conf
+RUN sed -i 's/user  nginx;/user  application;/g' /etc/nginx/nginx.conf
 RUN set -x \
     && pecl uninstall xdebug \
     && pecl install -f xdebug-2.9.8 \
